[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enimies/Enemy_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enimies/InimigosNProntos/Enemy_attack_Base.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Movimento_aletorio.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="CircleShape2D" id=2]
radius = 114.23

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.8805, 10 )

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Range" parent="." index="6" instance=ExtResource( 2 )]

[node name="Attack_Range" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range" index="0"]
shape = SubResource( 2 )

[node name="Hitbox2" parent="." index="8" instance=ExtResource( 3 )]
position = Vector2( 46, 0 )
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox2" index="0"]
shape = SubResource( 3 )
disabled = true

[node name="AttackDuration" type="Timer" parent="." index="9"]
wait_time = 0.5
one_shot = true

[node name="Random_moviment" parent="." index="10" instance=ExtResource( 6 )]
[connection signal="body_entered" from="Attack_Range" to="." method="_on_Attack_Range_body_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_Attack_Range_body_exited"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_AttackDuration_timeout"]

[editable path="Range"]

[editable path="Hitbox2"]
